--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "pino-server-core",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
+  "type": "module", 
   "scripts": {
-    "dev": "env-cmd nodemon index.js",
+    "dev": "env-cmd nodemon src/index.js",
     "repl": "env-cmd node"
   },
   "keywords": [],
@@ -16,6 +17,9 @@
   "dependencies": {
     "@cyclic.sh/dynamodb": "^0.0.33",
     "env-cmd": "^10.1.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1", 
+    "uuid": "^6.1.0", 
+    "jsonwebtokens": "^8.6.0", 
+    "axios": "^1.1.0"
   }
 }
