--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.18.1", 
     "uuid": "^6.1.0", 
-    "jsonwebtokens": "^8.6.0", 
+    "jsonwebtoken": "^8.6.0", 
     "axios": "^1.1.0"
   }
 }
