--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.18.1", 
     "uuid": "^9.0.0", 
     "jsonwebtoken": "^9.0.0", 
-    "axios": "^1.3.3"
+    "axios": "^1.3.3", 
+    "slugify": "^1.6.5", 
+    "@faker-js/faker": "^7.5.0"
   }
 }
