--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.0", 
     "axios": "^1.3.3", 
     "slugify": "^1.6.5", 
-    "@faker-js/faker": "^7.5.0"
+    "@faker-js/faker": "^7.5.0", 
+    "short-uuid": "^4.2.2"
   }
 }
