--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.3.3", 
     "slugify": "^1.6.5", 
     "@faker-js/faker": "^7.5.0", 
-    "short-uuid": "^4.2.2"
+    "short-uuid": "^4.2.2", 
+    "cors": "^2.8.5"
   }
 }
