--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "short-uuid": "^4.2.2", 
     "cors": "^2.8.5", 
     "helmet": "^6.0.1", 
-    "multer": "", 
-    "aws-sdk": "", 
+    "multer": "^1.4.5-lts.1", 
+    "@aws-sdk/client-s3": "^3.272.0", 
     "multer-s3": "^3.0.1"
   }
 }
