--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "helmet": "^6.0.1", 
     "multer": "^1.4.5-lts.1", 
     "@aws-sdk/client-s3": "^3.272.0", 
+    "@aws-sdk/s3-request-presigner": "^3.272.0",
     "multer-s3": "^3.0.1"
   }
 }
